--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -42,3 +42,5 @@ jobs:
           mvn sonar:sonar \
             -Dsonar.projectKey=meddegodagemsb214132b_lab02 \
             -Dsonar.organization=meddegodagemsb214132b-github
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
