--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -21,26 +21,16 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          distribution: temurin
+          java-version: 17
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Build with Maven
-        run: mvn -B verify
-
-      - name: SonarCloud Scan
+      - name: Build and SonarCloud Scan
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn sonar:sonar \
+          mvn -B clean verify sonar:sonar \
             -Dsonar.projectKey=meddegodagemsb214132b_lab02 \
-            -Dsonar.organization=meddegodagemsb214132b-github
+            -Dsonar.organization=meddegodagemsb214132b-github \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
