--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           mvn -B clean verify sonar:sonar \
             -Dsonar.projectKey=meddegodagemsb214132b_lab02 \
-            -Dsonar.organization=meddegodagemsb214132b-github \
+            -Dsonar.organization=meddegodagemsb214132b-github 
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
